<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_29pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.core.widget.NestedScrollView
            android:clipToPadding="false" android:fillViewport="true"
            android:gravity="center_horizontal"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnsearch"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSearch"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_search"
                    style="@style/txtComfortaaregular36" tools:text="@string/lbl_search"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                    android:ellipsize="end"
                    android:hint="@string/lbl_dogs"
                    android:id="@+id/etComponent"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidOutline" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAllresults"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@string/lbl_all_results"
                    android:textAllCaps="true"
                    style="@style/txtRobotoblack13" tools:text="@string/lbl_all_results"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:gravity="center_horizontal"
                    android:id="@+id/recyclerSearchResults"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    itemSpace="@{@dimen/_11pxh}" tools:itemCount="5" tools:listitem="@layout/row_search_results"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSeeMore"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_52pxv"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_width="@dimen/_343pxh"
                    android:letterSpacing="0.03"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_see_more"
                    android:textAllCaps="true"
                    style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_see_more"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
